ircv3_parse_derive/tests/ui/de/pass/basic_struct.rs
use ircv3_parse_derive::FromMessage;

#[derive(FromMessage)]
struct TestMessage {
    #[irc(tag = "key")]
    field: String,
}

fn main() {}
