ircv3_parse_derive/tests/ui/de/fail/field_missing_attribute.rs
use ircv3_parse_derive::FromMessage;

#[derive(FromMessage)]
struct M1 {
    field: String,
}

#[derive(FromMessage)]
struct M2 {
    #[irc()]
    field: String,
}

fn main() {}
